maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:17: error: type mismatch;
 found   : Double
 required: Int
 	return Math.random() * ( n )
                             ^